// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en GifReactApp debe de hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category={Array []}
      key=""
    />
  </ol>
</Fragment>
`;

exports[`pruebas en GifReactApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category={
        Array [
          "jjba",
        ]
      }
      key="jjba"
    />
  </ol>
</Fragment>
`;
